<resources>

    <string name="app_name">Local Chat</string>
    <string name="lb_login">Login</string>
    <string name="lb_password">Password</string>
    <string name="lb_email">Email</string>
    <string name="lb_name">Name</string>
    <string name="lb_age">Age</string>
    <string name="lb_gender">Gender</string>
    <string name="lb_create_account">Create Account</string>
    <string name="lb_already_member">Already a member? Login</string>
    <string name="lb_no_account_yet">No account yet? Create one</string>
    <string name="lb_today">today</string>
    <string name="lb_button_send">Send</string>
    <string name="lb_gender_male">Male</string>
    <string name="lb_gender_female">Female</string>
    <string name="lb_distance">Show users up to:</string>
    <string name="lb_meters">meters</string>

    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>

    <string name="description_profile_image">Profile\'s image</string>

    <string name="action_attach_image">Attach image</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign out</string>
    <string name="action_about">About</string>

    <string name="error_chars_least_number">at least %1$d characters</string>
    <string name="error_email_valid">enter a valid email address</string>
    <string name="error_chars_bet_numbers">between %1$d and %2$d alphanumeric characters</string>
    <string name="error_numbers_bet">between %1$d and %2$d</string>
    <string name="error_gender">choose a gender</string>
    <string name="error_loading_nearby_users">There was a problem loading the nearby users</string>
    <string name="error_loading_chat_room_data">There was a problem loading the chat data</string>
    <string name="error_loading_chat">There was a problem loading the messages</string>
    <string name="signing_up_failed">Sign up failed. Try another email!</string>
    <string name="registration_failed">Registration failed! Try another e-mail.</string>
    <string name="chars_range">between %1$d and %2$d alphanumeric characters</string>
    <string name="enter_valid_email">enter a valid email address</string>
    <string name="auth_failed">Email and Password don\'t match!</string>
    <string name="auth_failed_title">Auth failed</string>
    <string name="empty_chat">There aren\'t any messages</string>
    <string name="empty_nearby_users">There isn\'t any nearby user</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="signing_in">Signing in...</string>
    <string name="signing_up">Signing up...</string>
    <string name="authenticating">Authenticating...</string>
    <string name="registering">Registering...</string>

    <string name="tab_title_1">NEARBY</string>
    <string name="tab_title_2">CHATS</string>

    <string name="profile_image_name">profile_image_name</string>
    <string name="user_name">user_name</string>
    <string name="user_last_location">last_location</string>
    <string name="user_profile_image">user_profile_image</string>

    <string name="number_minimum_chars_user_name" translatable="false"> 3 </string>
    <string name="number_maximum_chars_user_name" translatable="false"> 12 </string>
    <string name="number_minimum_chars_password" translatable="false"> 4 </string>
    <string name="number_maximum_chars_password" translatable="false"> 15 </string>
    <string name="number_minimum_age" translatable="false"> 18 </string>
    <string name="number_maximum_age" translatable="false"> 99 </string>

    <string name="spinner_gender_choose"> Gender </string>
    <string name="spinner_gender_female"> female </string>
    <string name="spinner_gender_male"> male </string>
    <string name="spinner_gender_non_binary"> non binary </string>

    <string name="channel_name">Message channel</string>
    <string name="channel_description">Message received notification channel</string>

</resources>
