<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="site.paulo.localchat.ui.signup.SignUpActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="368dp"
                android:layout_height="551dp"
                android:fillViewport="true"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp">

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/emailSignUpTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lb_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/passwordSignUpTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lb_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/nameSignUpTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lb_name"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="@dimen/spacing_micro"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ageSignUpTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lb_age"
                        android:maxLength="2"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/genderSignUpSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/spacing_micro"
                    android:layout_weight="1">
                </Spinner>

                <!--<android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="@dimen/spacing_micro"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/genderSignUpTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lb_gender"
                        android:maxLength="1"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>-->

            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/createSignUpBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/lb_create_account"
                android:theme="@style/ThemeOverlay.MyMainButton"/>

            <TextView
                android:id="@+id/signinSignUpLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/lb_already_member"
                android:textSize="16dip"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
