<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/color_settings_background"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarStyle"
        app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"/>

    <RelativeLayout
        android:id="@+id/profileContainer"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spacing_large"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profileSettingsImg"
            android:layout_width="@dimen/image_width_settings"
            android:layout_height="@dimen/image_height_settings"
            android:transitionName="@string/profile_image_name"
            tools:src="@drawable/user_default"/>

        <TextView
            android:id="@+id/nameSettingsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_centerVertical="true"
            style="@style/TextAppearanceProfileSettings"
            android:layout_toRightOf="@id/profileSettingsImg"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/settingsContainer"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spacing_large"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/distanceSettingsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_distance"/>

        <TextView
            android:id="@+id/metersSettingsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_meters"
            android:layout_alignParentRight="true"/>

        <com.xw.repo.BubbleSeekBar
            android:id="@+id/distanceSettingsSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bsb_bubble_color="@color/colorAccent"
            app:bsb_bubble_text_color="@color/color_distance_slider_text"
            app:bsb_min="100"
            app:bsb_max="500"
            app:bsb_progress="0"
            app:bsb_second_track_color="@color/colorAccent"
            app:bsb_section_count="4"
            app:bsb_section_text_position="bottom_sides"
            app:bsb_show_section_mark="true"
            app:bsb_show_section_text="true"
            app:bsb_seek_step_section="true"
            app:bsb_show_thumb_text="true"
            app:bsb_track_color="@color/color_distance_slider_track"
            android:layout_toRightOf="@id/distanceSettingsLabel"
            android:layout_toLeftOf="@id/metersSettingsLabel"/>


    </RelativeLayout>

</LinearLayout>